# sta-awscli

./: .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sta-awscli.py
.github/workflows/: geberate-changelog.yml  python-publish.yml  python1-publish.yml  python2-publish.yml  update-changelog.yml
src/sta-awscli/: VERSION  __init__.py  __main__.py
sta-awscli/: VERSION  __init__.py  __main__.py
sta_awscli/: __init__.py  sta_awscli.py
