[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sta-awscli"
version = "2.0.7"
authors = ["Gur Talmor, Cina Shaykhian and Alex Basin"]
description = "MFA for AWS CLI using SafeNet Trusted Access (STA)"
readme = "README.md"
license = "MIT License"
homepage = "https://github.com/thalesdemo/sta-awscli"
repository = "https://github.com/thalesdemo/sta-awscli"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]

python = ">=3.8,<4.0"
beautifulsoup4 = "4.11.1"
boto3 = "1.24.59"
botocore = "1.27.59"
bs4 = "0.0.1"
certifi = "2022.6.15"
charset-normalizer = "2.1.1"
decorator = "5.1.1"
idna = "3.3"
jmespath = "1.0.1"
numpy = "1.23.2"
opencv-python = "4.6.0.66"
packaging = "21.3"
pillow = "9.2.0"
pwinput = "1.0.2"
pyparsing = "3.0.9"
pytesseract = "0.3.10"
python-dateutil = "2.8.2"
requests = "2.28.1"
s3transfer = "0.6.0"
six = "1.16.0"
soupsieve = "2.3.2.post1"
urllib3 = "1.26.12"
validators = "0.20.0"
argcomplete = "2.0.0"
pyreadline = "2.1"

[tool.poetry.scripts]
sta-awscli = "sta_awscli.sta_awscli:main"
