[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sta-awscli"
version = "2.0.11"
authors = ["Gur Talmor, Cina Shaykhian and Alex Basin"]
description = "MFA for AWS CLI using SafeNet Trusted Access (STA)"
readme = "README.md"
license = "MIT License"
homepage = "https://github.com/thalesdemo/sta-awscli"
repository = "https://github.com/thalesdemo/sta-awscli"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]

python = ">=3.6,<4.0"
Pillow = "*"
beautifulsoup4 = "*"
boto3 = "*"
botocore = "*"
bs4 = "*"
numpy = "*"
scikit-build = "*"
opencv-python = "*"
packaging = "*"
pwinput = ">=1.0"
pytesseract = "^0.2"
requests = ">=2.0"
urllib3 = "*"
validators = "*"
argcomplete = "*"
pyreadline3 = "*"
colorama = "*"
wget = "*"


[tool.poetry.scripts]
sta-awscli = "sta_awscli.sta_awscli:main"
