[project]
name = "sta-awscli"
version = "2.0.0"
authors = [
  { name="Gur Talmor, Cina Shaykhian and Alex Basin" },
]
description = "MFA for AWS CLI using SafeNet Trusted Access (STA)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thalesdemo/sta-awscli"
"Bug Tracker" = "https://github.com/thalesdemo/sta-awscli/issues"
